src/objects/Syndication_Event__e.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Show__c</fullName>
        <label>Show</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscriber_Station_Network__c</fullName>
        <label>Subscriber Station/Network</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Syndication Event</label>
    <pluralLabel>Syndication Events</pluralLabel>
</CustomObject>